<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Welcome_screen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:scaleType="centerInside"
        android:src="@drawable/welcome_svg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="62dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:lineHeight="26dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:lineHeight="20dp"
            android:text="@string/subTxt"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary_blue"
            android:fontFamily="@font/inter_medium"
            android:fontFeatureSettings="pnum, lnum"
            android:gravity="center"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:foregroundGravity="center"
                android:text="@string/noAcc"
                android:textColor="@color/secondary"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/signup"
                android:textColor="@color/primary_blue"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>