<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    tools:context=".Sign_up_Screens.Admin_signup.Admin_signup_pg1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <!--        Back btn-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon"
            app:backgroundTint="#00000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/inter_medium"
                android:lineHeight="26dp"
                android:text="@string/one"
                android:textColor="@color/primary_blue"
                android:textSize="21sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:lineHeight="19dp"
                android:text="@string/two_"
                android:textColor="@color/secondary"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="32dp"
        android:paddingEnd="24dp"
        android:paddingBottom="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:gravity="start"
            android:text="@string/signup_heading"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/country_code_border"
                android:padding="12dp"
                android:textAlignment="textStart"
                app:ccp_arrowSize="14sp"
                app:ccp_contentColor="@color/black"
                app:ccp_countryPreference="in"
                app:ccp_textGravity="LEFT"
                app:ccp_textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_num"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/phone"
                app:boxStrokeColor="@color/black"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/phone_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/otp"
                app:boxStrokeColor="@color/black"
                app:endIconMode="password_toggle"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/password_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:foregroundGravity="center"
                android:text="@string/otp_not_received"
                android:textColor="@color/secondary"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resend_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:clickable="true"
                android:enabled="false"
                android:focusable="true"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/resend"
                android:textColor="@color/primary_blue"
                android:textSize="14sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary_blue"
            android:enabled="true"
            android:fontFamily="@font/inter_medium"
            android:fontFeatureSettings="pnum, lnum"
            android:gravity="center"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/getotp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="6dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:foregroundGravity="center"
                android:text="@string/hav_acc"
                android:textColor="@color/secondary"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/login"
                android:textColor="@color/primary_blue"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>